# propensity-telecom-case-study

./: .gitignore  .pre-commit-config.yaml  2026-03-21-100340-what-is-this-project-about.txt  2026-03-21-105703-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  claude.yml  publish.yml
configs/: train.yaml
docs/: configuration.md  getting-started.md  index.md
notebooks/: 01_prototype.ipynb
scripts/: generate_synthetic_data.py
src/propensity_telecom_case_study/: __init__.py  config.py  scripts.py
src/propensity_telecom_case_study/api/: main.py  schemas.py
src/propensity_telecom_case_study/api/routers/: frontend.py  predict.py
src/propensity_telecom_case_study/api/static/: index.html
src/propensity_telecom_case_study/api/templates/: index.html.j2
src/propensity_telecom_case_study/application/: inference.py  training.py
src/propensity_telecom_case_study/domain/: drift.py  explainability.py  features.py  metrics.py  model.py  reproducibility.py
src/propensity_telecom_case_study/io/: alerts.py  datasets.py  registries.py
tasks/: check.just  clean.just  install.just  serve.just  train.just
tests/: conftest.py
tests/api/: test_main.py
tests/application/: test_training.py
tests/domain/: test_features.py  test_metrics.py  test_model.py
tests/io/: test_datasets.py
