[project]
name = "propensity-telecom-case-study"
version = "0.1.0"
description = "Propensity model to identify drivers for telecom customers most likely to adopt a higher value plan."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.7.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "mlflow>=2.13.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
    "shap>=0.51.0",
    "evidently>=0.7.21",
    "plyer>=2.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pandas-stubs>=2.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
propensity-train = "propensity_telecom_case_study.scripts:train"
propensity-predict = "propensity_telecom_case_study.scripts:predict"
propensity-serve = "propensity_telecom_case_study.scripts:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/propensity_telecom_case_study"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.5.1",
]
